--- a/src/app.css
+++ b/src/app.css
@@ -205,7 +205,7 @@ svg {
   direction: rtl;
 }
 
-.arabic-font-1, .arabic-font-2, .arabic-font-3 {
+.arabic-font-1, .arabic-font-2, .arabic-font-3, .arabic-font-9 {
   font-family: "Uthmani-Hafs";
 }
 
