--- a/static/css/global.css
+++ b/static/css/global.css
@@ -2631,16 +2631,8 @@ input[type="range"].range-lg::-moz-range-thumb {
   padding-left: 1rem;
 }
 
-.pl-6 {
-  padding-left: 1.5rem;
-}
-
 .pr-2 {
   padding-right: 0.5rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
 }
 
 .pr-6 {
@@ -3379,11 +3371,12 @@ svg {
 .arabic-font-4,
 .arabic-font-5,
 .arabic-font-6,
-.arabic-font-7 {
+.arabic-font-7,
+.arabic-font-9 {
   direction: rtl;
 }
 
-.arabic-font-1, .arabic-font-2, .arabic-font-3 {
+.arabic-font-1, .arabic-font-2, .arabic-font-3, .arabic-font-9 {
   font-family: "Uthmani-Hafs";
 }
 
