--- a/src/styles/core/fonts.css
+++ b/src/styles/core/fonts.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "Uthmani-Hafs";
-  src: url("../fonts/Uthmanic_NeoCOLOR-Regular.woff2") format("woff2");
+  src: url("/fonts/Uthmanic_NeoCOLOR-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: "Uthmani-Hafs-Bold";
-  src: url("../fonts/Uthmanic_NeoBCOLOR-VF.woff2") format("woff2");
+  src: url("/fonts/Uthmanic_NeoBCOLOR-VF.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: "IndoPak";
-  src: url("../fonts/AlQuranNeov5x1.woff2") format("woff2");
+  src: url("/fonts/AlQuranNeov5x1.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -26,7 +26,7 @@
 
 @font-face {
   font-family: "Nastaleeq-Hafs";
-  src: url("../fonts/Nastaleeq_COLOR-Regular.woff2") format("woff2");
+  src: url("/fonts/Nastaleeq_COLOR-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -34,7 +34,7 @@
 
 @font-face {
   font-family: "Nastaleeq-Hafs-Bold";
-  src: url("../fonts/NastaleeqB_COLOR-Regular.woff2") format("woff2");
+  src: url("/fonts/NastaleeqB_COLOR-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -42,7 +42,7 @@
 
 @font-face {
   font-family: "chapter-icons";
-  src: url("../fonts/surahs_v4-Regular.woff2") format("woff2");
+  src: url("/fonts/surahs_v4-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -50,7 +50,7 @@
 
 @font-face {
   font-family: "tajweed-rules";
-  src: url("../fonts/QCF4_TajweedRules-Regular.woff2") format("woff2");
+  src: url("/fonts/QCF4_TajweedRules-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -58,7 +58,7 @@
 
 @font-face {
   font-family: "bismillah";
-  src: url("../fonts/QCF_Bismillah_COLOR-Regular.woff2") format("woff2");
+  src: url("/fonts/QCF_Bismillah_COLOR-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -66,7 +66,7 @@
 
 @font-face {
   font-family: "urdu";
-  src: url("../fonts/Mehr-Nastaliq.ttf") format("truetype");
+  src: url("/fonts/Mehr-Nastaliq.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -74,7 +74,7 @@
 
 @font-face {
   font-family: "sindhi";
-  src: url("../fonts/MBLateefi.otf") format("opentype");
+  src: url("/fonts/MBLateefi.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -82,7 +82,7 @@
 
 @font-face {
   font-family: "lexicon";
-  src: url("../fonts/lexicon.ttf") format("truetype");
+  src: url("/fonts/lexicon.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -90,7 +90,7 @@
 
 @font-face {
   font-family: "juz-icons";
-  src: url("../fonts/juz_names-Regular.woff2") format("woff2");
+  src: url("/fonts/juz_names-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
