--- a/src/styles/themes/theme-6-midnight-blue.css
+++ b/src/styles/themes/theme-6-midnight-blue.css
@@ -25,3 +25,7 @@
 [data-theme="midnight-blue"] .header { 
 	font-palette: --palette3; 
 }
+
+/* Scrollbar color */
+html.theme-6,
+[data-theme="midnight-blue"] { scrollbar-color: rgb(var(--color-accent-secondary)) transparent; scrollbar-width: thin; }
